fix expand button in dark mode

--- a/public/stylesheets/dark.scss
+++ b/public/stylesheets/dark.scss
@@ -49,3 +49,7 @@ input[type="text"] {
 hr {
     border-top: 1px solid rgba(255, 255, 255, .1)
 }
+
+section.signatories .expand a {
+    border-top: 1px solid #ccc;
+}
